# maildir-app

./: .gitignore  Cargo.toml  README.md  build.bat  build.rs  maildir.xcf
app/: Cargo.toml
app/src/: lib.rs
assets/: body.html  index.html  maildir.js  main.css
client/: Cargo.toml
server/: Cargo.toml
server/src/: lib.rs  main.rs
src/: main.rs
