[package]
name = "maildir-app"
version = "0.1.0"
authors = ["Casey Tucker <dctucker@hotmail.com>"]
edition = "2018"

[dependencies]
server = { path = "./server" }
app = { path = "./app" }
#client = { path = "./client" }

serde_json = "1.0"
futures = "0.1"
webbrowser = "0.5.5"

[dependencies.web-view]
version = "0.6.3"
features = ["edge"]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
OriginalFilename = "MAILDIR-APP.EXE"
LegalCopyright = "Copyright \u00a9 2020"
