[package]
name = "app"
version = "0.1.0"
authors = ["Casey Tucker <dctucker@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mailparse = "0.13.0"
maildir = { path = "E:/Users/casey/Development/maildir-server/maildir" }
walkdir = "2.3.1"
chrono = "0.4.13"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
html_sanitizer = "0.1.1"
